update edgeR and include 05supplement

--- a/exercises/06_DE_edgeR.Rmd
+++ b/exercises/06_DE_edgeR.Rmd
@@ -2,7 +2,14 @@
 title: "Differential Expression Analysis with EdgeR"
 author: "Carson Stacy & Jeffrey Lewis"
 date: "Fall 2023"
-output: html_document
+output: 
+  html_document:
+    code_folding: show
+editor_options: 
+  markdown: 
+    wrap: 72
+bibliography: references.bib
+link-citations: TRUE
 ---
 
 last updated: `r Sys.Date()`
@@ -31,10 +38,12 @@ p_load("tidyverse", "knitr", "readr",
 p_load("edgeR", "AnnotationDbi", "org.Sc.sgd.db")
 ```
 
-
 # Description
 
-This will be our first differential expression analysis workflow, converting gene counts across samples into meaningful information about genes that appear to be significantly differentially expressed between samples
+This will be our first differential expression analysis workflow,
+converting gene counts across samples into meaningful information about
+genes that appear to be significantly differentially expressed between
+samples
 
 # Learning outcomes
 
@@ -42,8 +51,8 @@ At the end of this exercise, you should be able to:
 
 -   Generate a table of sample metadata.
 -   Filter low counts and normalize count data.
--   Utilize the edgeR package to identify differentially expressed genes.
-
+-   Utilize the edgeR package (@edgeR) to identify differentially expressed
+    genes.
 
 ```{r load-libraries}
 library(edgeR)
@@ -52,18 +61,24 @@ library(org.Sc.sgd.db)
 options(digits=3)
 ```
 
-# Loading in the featureCounts object 
+# Loading in the featureCounts object
 
-We saved this file in the last exercise (Read_Counting.Rmd) from the RSubread package. Now we can load that object back in and assign it to the variable `fc`. Be sure to change the file path if you have saved it in a different location.
-```{r load-counts, error=TRUE}
+We saved this file in the last exercise (0Read_Counting.Rmd) from the
+RSubread package. Now we can load that object back in and assign it to
+the variable `fc`. Be sure to change the file path if you have saved it
+in a different location.
+
+```{r load-count_subset, error=TRUE}
 path_fc_object <- path.expand("~/Desktop/Genomic_Data_Analysis/Data/Counts/Rsubread/rsubread.yeast_fc_output.Rds")
 
 counts_subset <- readRDS(file = path_fc_object)$counts
 ```
 
+We generated those counts on a subset of the fastq files, but we can
+load the complete count file with the command below. This file has been
+generated with the full size fastq files with Salmon.
 
-We generated those counts on a subset of the fastq files, but we can load the complete count file with the command below. This file has been generated with the full size fastq files with Salmon. 
-```{r altLoad-fc}
+```{r load-full_counts}
 counts <- read_tsv('https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/main/data/ethanol_stress/counts/salmon.gene_counts.merged.nonsubsamp.tsv',
                    col_names = TRUE) %>%
   # when we saved the tsv file, it converted the rownames to a column,
@@ -71,13 +86,17 @@ counts <- read_tsv('https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/main
   column_to_rownames("Name")
 ```
 
-So far, we've been able to process all of the fastq files without much information about what each sample is in the experimental design. Now, we need the metadata for the samples. Note that the order matters for these files
+So far, we've been able to process all of the fastq files without much
+information about what each sample is in the experimental design. Now,
+we need the metadata for the samples. Note that the order matters for
+these files
 
-To find the order of files we need, we can get just the part of the column name before the first "." symbol with this command:
+To find the order of files we need, we can get just the part of the
+column name before the first "." symbol with this command:
+
 ```{r identify-sampleOrder}
 str_split_fixed(counts %>% colnames(), "\\.", n = 2)[, 1] %>% cat()
 ```
-
 
 ```{r generate-metadata}
 sample_metadata <- tribble(
@@ -127,10 +146,13 @@ colnames(design) <- levels(group)
 design
 ```
 
-
 # Count loading and Annotation
 
-The count matrix is used to construct a DGEList class object. This is the main data class in the edgeR package. The DGEList object is used to store all the information required to fit a generalized linear model to the data, including library sizes and dispersion estimates as well as counts for each gene.
+The count matrix is used to construct a DGEList class object. This is
+the main data class in the edgeR package. The DGEList object is used to
+store all the information required to fit a generalized linear model to
+the data, including library sizes and dispersion estimates as well as
+counts for each gene.
 
 ```{r load-counts}
 y <- DGEList(counts, group=group)
@@ -138,7 +160,8 @@ colnames(y) <- sample_metadata$Sample
 y$samples
 ```
 
-Human-readable gene symbols can also be added to complement the gene ID for each gene, using the annotation in the org.Sc.sgd.db package.
+Human-readable gene symbols can also be added to complement the gene ID
+for each gene, using the annotation in the org.Sc.sgd.db package.
 
 ```{r}
 y$genes <- AnnotationDbi::select(org.Sc.sgd.db,keys=rownames(y),columns="GENENAME")
@@ -146,11 +169,15 @@ y$genes <- AnnotationDbi::select(org.Sc.sgd.db,keys=rownames(y),columns="GENENAM
 head(y$genes)
 ```
 
-
 # Filtering to remove low counts
 
-
-Genes with very low counts across all libraries provide little evidence for differential ex- pression. In addition, the pronounced discreteness of these counts interferes with some of the statistical approximations that are used later in the pipeline. These genes should be filtered out prior to further analysis. Here, we will retain a gene only if it is expressed at a count-per-million (CPM) above 0.7 in at least four samples.
+Genes with very low counts across all libraries provide little evidence
+for differential ex- pression. In addition, the pronounced discreteness
+of these counts interferes with some of the statistical approximations
+that are used later in the pipeline. These genes should be filtered out
+prior to further analysis. Here, we will retain a gene only if it is
+expressed at a count-per-million (CPM) above 0.7 in at least four
+samples.
 
 ```{r filter-lowCounts}
 keep <- rowSums(cpm(y) > 0.7) >= 4
@@ -160,25 +187,43 @@ summary(keep)
 
 Where did those cutoff numbers come from?
 
-As a general rule, we don't want to exclude a gene that is expressed in only one group, so a cutoff number equal to the number of replicates can be a good starting point. For counts, a good threshold can be chosen by identifying the CPM that corresponds to a count of 10, which in this case would be about 0.7:
+As a general rule, we don't want to exclude a gene that is expressed in
+only one group, so a cutoff number equal to the number of replicates can
+be a good starting point. For counts, a good threshold can be chosen by
+identifying the CPM that corresponds to a count of 10, which in this
+case would be about 0.7:
+
 ```{r estimate-cpmCutoff}
 cpm(10, mean(y$samples$lib.size))
 ```
 
 Smaller CPM thresholds are usually appropriate for larger libraries.
 
-
 # Normalization for composition bias
 
-TMM normalization is performed to eliminate composition biases between libraries. This generates a set of normalization factors, where the product of these factors and the library sizes defines the effective library size. The calcNormFactors function returns the DGEList argument with only the norm.factors changed.
+TMM normalization is performed to eliminate composition biases between
+libraries. This generates a set of normalization factors, where the
+product of these factors and the library sizes defines the effective
+library size. The calcNormFactors function returns the DGEList argument
+with only the norm.factors changed.
 
 ```{r calc-normFactors}
 y <- calcNormFactors(y)
 y$samples
 ```
 
-The normalization factors multiply to unity across all libraries. A normalization factor below unity indicates that the library size will be scaled down, as there is more suppression (i.e., composition bias) in that library relative to the other libraries. This is also equivalent to scaling the counts upwards in that sample. Conversely, a factor above unity scales up the library size and is equivalent to downscaling the counts.
-The performance of the TMM normalization procedure can be examined using mean- difference (MD) plots. This visualizes the library size-adjusted log-fold change between two libraries (the difference) against the average log-expression across those libraries (the mean). The below command plots an MD plot, comparing sample 1 against an artificial library constructed from the average of all other samples.
+The normalization factors multiply to unity across all libraries. A
+normalization factor below unity indicates that the library size will be
+scaled down, as there is more suppression (i.e., composition bias) in
+that library relative to the other libraries. This is also equivalent to
+scaling the counts upwards in that sample. Conversely, a factor above
+unity scales up the library size and is equivalent to downscaling the
+counts. The performance of the TMM normalization procedure can be
+examined using mean- difference (MD) plots. This visualizes the library
+size-adjusted log-fold change between two libraries (the difference)
+against the average log-expression across those libraries (the mean).
+The below command plots an MD plot, comparing sample 1 against an
+artificial library constructed from the average of all other samples.
 
 ```{r plotMDS, fig.show="hold", out.width="25%"}
 for (sample in 1:nrow(y$samples)) {
@@ -189,7 +234,10 @@ for (sample in 1:nrow(y$samples)) {
 
 # Exploring differences between libraries
 
-The data can be explored by generating multi-dimensional scaling (MDS) plots. This visualizes the differences between the expression profiles of different samples in two dimensions. The next plot shows the MDS plot for the yeast heatshock data.
+The data can be explored by generating multi-dimensional scaling (MDS)
+plots. This visualizes the differences between the expression profiles
+of different samples in two dimensions. The next plot shows the MDS plot
+for the yeast heatshock data.
 
 ```{r plot-MDS}
 points <- c(1,1,2,2)
@@ -199,13 +247,12 @@ legend("topright", legend=levels(group),
      pch=points, col=colors, ncol=2)
 ```
 
-
-
 # Estimate Dispersion
 
-The trended NB dispersion is estimated using the estimateDisp function. This returns
-the DGEList object with additional entries for the estimated NB dispersions for all genes.
-These estimates can be visualized with plotBCV, which shows the root-estimate, i.e., the
+The trended NB dispersion is estimated using the estimateDisp function.
+This returns the DGEList object with additional entries for the
+estimated NB dispersions for all genes. These estimates can be
+visualized with plotBCV, which shows the root-estimate, i.e., the
 biological coefficient of variation for each gene
 
 ```{r estimate-dispersion}
@@ -213,35 +260,45 @@ y <- estimateDisp(y, design, robust=TRUE)
 plotBCV(y)
 ```
 
-In general, the trend in the NB dispersions should decrease smoothly with increasing
-abundance. This is because the expression of high-abundance genes is expected to be more
-stable than that of low-abundance genes. Any substantial increase at high abundances may
-be indicative of batch effects or trended biases. The value of the trended NB dispersions
-should range between 0.005 to 0.05 for laboratory-controlled biological systems like mice
-or cell lines, though larger values will be observed for patient-derived data (> 0.1)
+In general, the trend in the NB dispersions should decrease smoothly
+with increasing abundance. This is because the expression of
+high-abundance genes is expected to be more stable than that of
+low-abundance genes. Any substantial increase at high abundances may be
+indicative of batch effects or trended biases. The value of the trended
+NB dispersions should range between 0.005 to 0.05 for
+laboratory-controlled biological systems like mice or cell lines, though
+larger values will be observed for patient-derived data (\> 0.1)
 
+For the QL dispersions, estimation can be performed using the glmQLFit
+function. This returns a DGEGLM object containing the estimated values
+of the GLM coefficients for each gene
 
-For the QL dispersions, estimation can be performed using the glmQLFit function. This
-returns a DGEGLM object containing the estimated values of the GLM coefficients for each
-gene
 ```{r generate-fit}
 fit <- glmQLFit(y, design, robust=TRUE)
 head(fit$coefficients)
 plotQLDisp(fit)
 ```
 
-EB squeezing of the raw dispersion estimators towards the trend reduces the uncertainty of the final estimators. The extent of this moderation is determined by the value of the prior df, as estimated from the data. Large estimates for the prior df indicate that the QL dispersions are less variable between genes, meaning that stronger EB moderation can be performed. Small values for the prior df indicate that the dispersions are highly
-variable, meaning that strong moderation would be inappropriate
+EB squeezing of the raw dispersion estimators towards the trend reduces
+the uncertainty of the final estimators. The extent of this moderation
+is determined by the value of the prior df, as estimated from the data.
+Large estimates for the prior df indicate that the QL dispersions are
+less variable between genes, meaning that stronger EB moderation can be
+performed. Small values for the prior df indicate that the dispersions
+are highly variable, meaning that strong moderation would be
+inappropriate
 
-Setting `robust=TRUE` in glmQLFit is strongly recommended. This causes glmQLFit to estimate a vector of df.prior values, with lower values for outlier genes and larger values for the main body of genes.
-
+Setting `robust=TRUE` in glmQLFit is strongly recommended. This causes
+glmQLFit to estimate a vector of df.prior values, with lower values for
+outlier genes and larger values for the main body of genes.
 
 # Testing for differential expression
 
-The final step is to actually test for significant differential expression in each gene, using
-the QL F-test. The contrast of interest can be specified using the makeContrasts function.
-Here, genes are detected that are DE between the stressed and unstressed.
-This is done by defining the null hypothesis as heat stressed - unstressed = 0.
+The final step is to actually test for significant differential
+expression in each gene, using the QL F-test. The contrast of interest
+can be specified using the makeContrasts function. Here, genes are
+detected that are DE between the stressed and unstressed. This is done
+by defining the null hypothesis as heat stressed - unstressed = 0.
 
 ```{r fit-contrast}
 # generate contrasts we are interested in learning about
@@ -274,11 +331,13 @@ summary(is.de)
 ```
 
 Let's take a quick look at the differential expression
+
 ```{r visualize-DEgenes}
 plotSmear(res, de.tags=rownames(res)[is.de!=0])
 ```
 
 Here is how we can save our output file(s).
+
 ```{r save-res}
 # Choose topTags destination
 dir_output_edgeR <-
@@ -298,56 +357,70 @@ topTags(res, n = Inf) %>% data.frame() %>%
 saveRDS(object = res, file = paste0(dir_output_edgeR, "yeast_res_edgeR.Rds"))
 ```
 
-
 ## Questions
 
-Question 1: How many genes were upregulated and downregulated in the contrast we looked at in todays activity? Be sure to clarify the cutoffs used for determining significance.
+Question 1: How many genes were upregulated and downregulated in the
+contrast we looked at in todays activity? Be sure to clarify the cutoffs
+used for determining significance.
 
-Question 2: Which gene has the lowest pvalue with a postive log2 fold change?
+Question 2: Which gene has the lowest pvalue with a postive log2 fold
+change?
 
-Question 3: Choose one of the contrasts in `my.contrasts` that we didn't test together, and identify the top 3 most differentially expressed genes.
+Question 3: Choose one of the contrasts in `my.contrasts` that we didn't
+test together, and identify the top 3 most differentially expressed
+genes.
 
-Question 4: In the contrast you chose, give a brief description of the biological interpretation of that contrast.
+Question 4: In the contrast you chose, give a brief description of the
+biological interpretation of that contrast.
 
-Question 5: We analyzed the counts generated by Salmon using the full fastq files. Load in the counts generated by Salmon with the subset fastq files and look at DE genes for the same contrast we did in class. What differences and similarities do you see? What do you think is causing this difference?
+Question 5: We analyzed the counts generated by Salmon using the full
+fastq files. Load in the counts generated by Salmon with the subset
+fastq files and look at DE genes for the same contrast we did in class.
+What differences and similarities do you see? What do you think is
+causing this difference?
 
-A template for doing this is below:
+## A template set of code chunks for doing this is below:
+
+We already loaded in the subset counts as the object `counts_subset`
+above. If you don't have that file, this code chunk will download it
+from GitHub.
 
 ```{r load-salmon}
-path_salmon_counts <- path.expand("~/Desktop/Genomic_Data_Analysis/Data/Counts/Salmon/salmon.gene_counts.merged.yeast.tsv")
-salmon_counts <- read_tsv(file = path_salmon_counts) %>%
-  column_to_rownames("Name") #need to do this to get geneID as rownames
+path_github_subset_counts <- 'https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/main/data/ethanol_stress/counts/salmon.gene_counts.merged.yeast.tsv'
+
+counts_subset <- read_tsv(path_github_subset_counts, col_names = TRUE) %>%
+  column_to_rownames("Name")
 ```
 
 ```{r repeat-edgeRWorkflow}
 # We are reusing the sample_metadata, group, etc that we assigned above
 
 # create DGEList with salmon counts
-y_salmon <- DGEList(salmon_counts, group=group)
-colnames(y_salmon) <- sample_metadata$Sample
+y_subset <- DGEList(counts_subset, group=group)
+colnames(y_subset) <- sample_metadata$Sample
 
 # add gene names
-y_salmon$genes <- AnnotationDbi::select(org.Sc.sgd.db,keys=rownames(y_salmon),
+y_subset$genes <- AnnotationDbi::select(org.Sc.sgd.db,keys=rownames(y_subset),
                                         columns="GENENAME")
 
 # filter low counts
-keep_salmon <- rowSums(cpm(y_salmon) > 60) >= 4
-y_salmon <- y_salmon[keep_salmon,]
+keep_subset <- rowSums(cpm(y_subset) > 60) >= 4
+y_subset <- y_subset[keep_subset,]
 
 # calculate norm factors
-y_salmon <-  calcNormFactors(y_salmon)
+y_subset <-  calcNormFactors(y_subset)
 
 # estimate dispersion
-y_salmon <- estimateDisp(y_salmon, design, robust=TRUE)
+y_subset <- estimateDisp(y_subset, design, robust=TRUE)
 
 # generate the fit
-fit_salmon <- glmQLFit(y_salmon, design, robust=TRUE)
+fit_subset <- glmQLFit(y_subset, design, robust=TRUE)
 
 # test our contrast of interest
-res_salmon <- glmQLFTest(fit_salmon, contrast = my.contrasts[,"EtOHvsWT.MSN24ddvsWT"])
+res_subset <- glmQLFTest(fit_subset, contrast = my.contrasts[,"EtOHvsWT.MSN24ddvsWT"])
 
 # generate a beautiful table for the pdf/html file.
-topTags(res_salmon, n=Inf) %>% 
+topTags(res_subset, n=Inf) %>% 
   data.frame() %>% 
   arrange(FDR) %>%
   mutate(logFC=round(logFC,2)) %>%
@@ -355,18 +428,21 @@ topTags(res_salmon, n=Inf) %>%
   reactable()
 
 # summarize the DE genes
-is.de_salmon <- decideTestsDGE(res_salmon, p.value=0.05)
-summary(is.de_salmon)
+is.de_subset <- decideTestsDGE(res_subset, p.value=0.05)
+summary(is.de_subset)
 
 # visualize results
-plotSmear(res_salmon, de.tags=rownames(res_salmon)[is.de_salmon!=0])
+plotSmear(res_subset, de.tags=rownames(res_subset)[is.de_subset!=0])
 ```
-
-
 
 Be sure to knit this file into a pdf or html file once you're finished.
 
 System information for reproducibility:
+
 ```{r}
 pander::pander(sessionInfo())
 ```
+
+# References
+
+<div id="refs"></div>
